--- a/pbm-app/package.json
+++ b/pbm-app/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.22.0",
+    "bootstrap-sass": "^3.3.7",
     "meteor-node-stubs": "~0.2.0"
   }
 }
